--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-name: "Pianfan's blog"
-description: "翩帆的个人技术博客"
+name: "Tanzongyouyi's blog"
+description: "谭总有一的个人技术博客"
 
-avatar: https://pianfan.github.io/images/avatar.jpg
-favicon: https://pianfan.github.io/images/favicon.ico
+avatar: https://tanzongyouyi.github.io/images/avatar.jpg
+favicon: https://tanzongyouyi.github.io/images/favicon.ico
 
 navigation:
   - name: 首页
@@ -18,16 +18,16 @@ excerpt_separator: <!-- more -->
 
 footer-links:
   zhihu: 
-  email: xiongyunhan@outlook.com
+  email: 2701262643@qq.com
   facebook:
-  github: pianfan
+  github: Tanzongyouyi
   rss: # just type anything here for a working RSS icon
   twitter: 
   youtube:
 
-footer-text: Copyright (c) 2024 Pianfan
+footer-text: Copyright (c) 2025 Tanzongyouyi
 
-url: https://pianfan.github.io
+url: https://tanzongyouyi.github.io
 
 permalink: /:title/
 paginate_path: /page:num/
