--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: 2701262643@qq.com
   facebook:
   github: Tanzongyouyi
-  rss: # just type anything here for a working RSS icon
+  rss: none# just type anything here for a working RSS icon
   twitter: 
   youtube:
 
