--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: "Tanzongyouyi's blog"
 description: "谭总有一的个人技术博客"
 
 avatar: https://tanzongyouyi.github.io/images/avatar.jpg
-favicon: https://tanzongyouyi.github.io/images/favicon.ico
+favicon: https://img.picgo.net/2025/07/18/favicon6e1074f81e397a80.jpg
 
 navigation:
   - name: 首页
