--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Tanzongyouyi's blog"
-description: "谭总有一的个人技术博客"
+description: "是个人物"
 
 avatar: https://tanzongyouyi.github.io/images/avatar.jpg
 favicon: https://img.picgo.net/2025/07/18/favicon6e1074f81e397a80.jpg
