--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "谭总有一的小破站"
-description: "是个人物"
+name: "谭总有一的小窝"
+description: "希望成为有亲切感的知识储藏室"
 
 avatar: https://tanzongyouyi.github.io/images/avatar.jpg
 favicon: https://img.picgo.net/2025/07/18/favicon6e1074f81e397a80.jpg
@@ -25,7 +25,7 @@ footer-links:
   twitter: 
   youtube:
 
-footer-text: Copyright (c) 2025 Tanzongyouyi
+footer-text: Copyright (c) 2025 Tanzongyouyi & Wave Web Studio
 
 url: https://tanzongyouyi.github.io
 
