--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ excerpt_separator: <!-- more -->
 
 footer-links:
   zhihu: 
-  email: 2701262643@qq.com
+  email: hi@tanzong.dpdns.org
   facebook:
   github: Tanzongyouyi
   rss: none# just type anything here for a working RSS icon
